cmake_minimum_required(VERSION 3.10)
project(basic_test)

# Setup testing
enable_testing()

find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIR})
if(GTest_FOUND)
  message("GTEST_INCLUDE_DIR = " ${GTEST_INCLUDE_DIR})
  message("GTEST_INCLUDE_DIRs = " ${GTEST_INCLUDE_DIRS})
  message ("GTest_Both_Libs = " ${GTEST_BOTH_LIBRARIES})
  message ("GTest_Lib = " ${GTEST_LIBRARIES})
  message ("GTest_Main_Lib = " ${GTEST_MAIN_LIBRARIES})
  message ("GTest_Root = " ${GTEST_ROOT})
else()
  message ("Not Found GoogleTest!")
endif()

find_package(Threads REQUIRED)
if(Threads_FOUND)
  set(THREADS_PREFER_PTHREAD_FLAG TRUE)
  set(CMAKE_USE_PTHREADS_INIT TRUE)
  set(CMAKE_USE_WIN32_THREADS_INIT FALSE)
  set(CMAKE_HP_PTHREADS_INIT FALSE)
  message("Threads init" ${CMAKE_THREAD_LIBS_INIT})
  message ("Threads_Pthread_Flag = " ${THREADS_PREFER_PTHREAD_FLAG})
  message("using WIN32 threads = " ${CMAKE_USE_WIN32_THREADS_INIT})
  message("are we using pthreads = " ${CMAKE_USE_PTHREADS_INIT})
  message("are we using hp pthreads = " ${CMAKE_HP_PTHREADS_INIT})
else()
  message ("Not Found GoogleTest!")
endif()